style.css
html {
    scroll-behavior: smooth;
}
@font-face {
    font-family: ourfont;
    src: url("Cormorant-Light.ttf");
}

body {
  font-family: ourfont;
  font-size: 130%;
  margin: 0 auto;
}

#home {
  background: url("bg.png") no-repeat;
  background-size: cover;
  height: 100vh;
}

a {
    text-decoration: none;
    color: #333;
    font-weight: bold;
    font-size: 1.2em;
}

#location {
    background: #FFF;
    height: 50vh;
    width: 100vw;
    margin: 10% auto;
}

#location-body {
  float: right;
}

#directions {
    float: left;
    width: 30%;
    line-height: 0.8;
}

#directions h1 {
    margin-left: 10%;
    font-size: 300%;
}

#directions h2,
#directions h3 {
    margin-left: 10%;
    font-size: 120%;
    color: #4C4C4C;
    line-height: 0.5;
}

#address-buttons li {
    display: inline;
}

#address-buttons img {
    height: 60px;
}

#directions p {
    font-size: 1.2em;
    line-height: 20px;
}

#map {
    float: left;
    width: 30%;
}

#map img {
    width: 90%;
}

#program {
    width: 100%;
    height: 100vh;
    background: url(20220615_192611.jpg) no-repeat;
    background-size: 100%;
}

#program-body {
    margin: auto;
    width: 22%;
    color: white;
    font-size: 2em;
    padding-top: 150px;
}

#program ul {
    line-height: 2em;
}

#program-body li {
    list-style: none;
}

#program-times {
    float: left;
    text-align: right;
    padding-right: 30px;
}
#program-events {
    float: right;
}

#accomodation {
    width: 100%;
    height: 100vh;
    font-size: 180%;
}

#accomodation-body {
    text-align: center;
    margin: auto;
    color: #777;
}

#accomodation-body h1 {
    color: #000;
}

#accomodation-body li {
    list-style: none;
}


#zikmundov a {
    text-decoration: none;
}

#zikmundov a:hover {
    color: #CCC;
}

#footer {
    width: 100vw;
    height: 100vw;
    background: red;
    text-align: center;
}

#footer a {
    text-decoration: underline;
}

#footer a:hover {
    color: #CCC;
}

